--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -17,11 +17,11 @@ header{
 }
  
 .mouseenter-practice{
-
-  
+  text-align:center;
+  font-family: 'Josefin Sans', sans-serif;
   width:200px;
   background-color:pink;
-  color:white;
+  color:black;
   clear:both;
   display:inline-block; 
   font-size:12px;
@@ -81,7 +81,8 @@ img{
   text-align:center;
   font-size:12px;
   font-family: 'Josefin Sans', sans-serif;
-  margin-bottom:50px
+  margin-bottom:50px;
+  margin-left:50px;
 }
 
 .input{
